# animation

./: .gitignore
0_lab/: CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake
0_lab/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
0_lab/Debug/: Lab00
0_lab/Lab00.xcodeproj/: project.pbxproj
0_lab/src/: Shape.cpp  main.cpp
1_lab/: CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake
1_lab/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
1_lab/Debug/: Lab01
1_lab/Lab01.xcodeproj/: project.pbxproj
1_lab/src/: main.cpp
2_lab/: CMakeCache.txt  README.md  cmake_install.cmake
2_lab/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
2_lab/Debug/: Lab02
2_lab/Lab02.xcodeproj/: project.pbxproj
2_lab/src/: main.cpp
3_lab/: README.md  cmake_install.cmake
3_lab/CMakeScripts/: ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
3_lab/Debug/: Asgn1  Lab03
3_lab/Lab03.xcodeproj/: project.pbxproj
4_lab/: CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake
4_lab/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
4_lab/Debug/: Lab04
4_lab/Lab04.xcodeproj/: project.pbxproj
4_lab/src/: main.cpp
5_lab/: CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake
5_lab/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
5_lab/Debug/: Lab05
5_lab/Lab05.xcodeproj/: project.pbxproj
5_lab/src/: main.cpp
6_lab/: CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake
6_lab/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
6_lab/Debug/: Lab06  cps.txt
6_lab/Lab06.xcodeproj/: project.pbxproj
6_lab/resources/: n_3_0_0.ts  tex_vert.glsl
6_lab/src/: Grid.cpp  ShapeCage.cpp  ShapeCage.h  main.cpp
7_lab/: CMakeCache.txt
7_lab/CMakeScripts/: ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
7_lab/Debug/: Lab07
7_lab/src/: Link.cpp  Link.hpp  main.cpp
8_lab/: CMakeLists.txt  README.md
8_lab/src/: main.cpp
9_lab/: CMakeCache.txt  cmake_install.cmake
9_lab/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
9_lab/Debug/: Lab09
9_lab/Lab09.xcodeproj/: project.pbxproj
9_lab/RelWithDebInfo/: Lab09
9_lab/Release/: Lab09
9_lab/resources/: elliot_galaxy.txt  gen_galaxy.py
9_lab/src/: main.cpp
EFISKE/: CMakeLists.txt  README
EFISKE 2/src/: Link.cpp  MatrixStack.cpp
HELI-DELIVERABLE/: CMakeLists.txt  README.txt
HELI-DELIVERABLE/resources/: simple_vert.glsl
HELI-DELIVERABLE/src/: Shape.cpp  helicopter.cpp  main.cpp  util.cpp
ik_assignment/: CMakeLists.txt  cmake_install.cmake
ik_assignment/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make
ik_assignment/Debug/: Lab07
ik_assignment/src/: CeresWrapper.cpp  CeresWrapper.hpp  Link.cpp  Link.hpp  Shape.cpp  main.cpp
keyframe_asgn/: CMakeCache.txt  CMakeLists.txt
keyframe_asgn/Asgn1.xcodeproj/: project.pbxproj
keyframe_asgn/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make
keyframe_asgn/Debug/: Lab03
keyframe_asgn/resources/: simple_frag.glsl  simple_vert.glsl
keyframe_asgn/src/: LightingShader.cpp  LightingShader.h  helicopter.cpp  helicopter.hpp  main.cpp  shader.cpp  shader.h  util.cpp  util.hpp
skeleton_asgn/: CMakeCache.txt  Grid.h  README.md  cmake_install.cmake
skeleton_asgn/Asgn2.xcodeproj/: project.pbxproj
skeleton_asgn/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel
skeleton_asgn/Debug/: Asgn2
skeleton_asgn/RelWithDebInfo/: Asgn2
skeleton_asgn/Release/: Asgn2
skeleton_asgn/resources/: attachment_dumb.txt  simple_frag.glsl  simple_vert.glsl
skeleton_asgn/src/: Grid.cpp  Grid.h  Shape.cpp  Shape.h  main.cpp
skeleton_asgn_deliverable/src/: Grid.h
skeleton_asgn_release/: CMakeLists.txt  README.md
skeleton_asgn_release/CMakeScripts/: ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
skeleton_asgn_release/src/: Program.cpp  (+3 more)
(+285 files in other folders)
